# shopbot

./: .gitignore  django.Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  test_api.http
bot/: init_bot.py  utils.py
bot/handlers/: __init__.py  menu.py
bot/management/commands/: bot.py
bot/middlewares/: auth.py
shop/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_rename_сategory_product_category.py  0003_delete_order.py  0004_size_product_size.py  0005_prodictimage.py  0006_remove_product_img.py  0007_alter_category_image.py
shopWebBot/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
shoppingCart/: admin.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
shoppingCart/migrations/: 0001_initial.py  0002_alter_order_payment_system.py  0003_alter_order_payment_system_alter_order_status_and_more.py  0004_alter_order_data.py  0005_selectedproductbasket_size_selectedproductorder_size_and_more.py
users/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: authentication.py  models.py  parser.py  serializers.py  service.py  views.py
utils/func_aws/: email_send.py  generate_token_email.py
